# mp-ddsp-ws20

./: .gitignore  .gitmodules  README.md  SETUP.md  sanity_checks.sh  setup_cpp.sh  setup_flink.sh
distributed_hardcoded_streaming_engine/: .clang-format  CMakeLists.txt  README.md  main.cpp  main_simple.cpp  main_simple_simple.cpp
distributed_string_engine/: .clang-format  CMakeLists.txt  Definitions.h  OperatorPipe.h  Pipeline.cpp  Pipeline.h  README.md  Schema.h  fmt  main.cpp
distributed_string_engine/generated_code_libraries/: Semaphore.h
distributed_string_engine/operator/: Append.cpp  CMakeLists.txt  Combine.cpp  ConsoleInput.cpp  ConsoleInput.h  ConsoleOutput.h  DistributedWindowAggregation.cpp  DistributedWindowAggregation.h  FileOutput.h  Filter.cpp  Filter.h  HashJoin.cpp  HashJoin.h  Operator.h  Parse.cpp  Parse.h  TCPReceiver.cpp  TCPReceiver.h
flink_benchmark/: .gitignore  README.md  build.sbt
flink_benchmark/src/main/scala/de/hpi/rabl/mp2020/flinkbenchmark/: FlinkBenchmark.scala
generator/: .gitignore  CMakeLists.txt  README.md  ad_config.csv  checkout_config.csv  client_mock.cpp  engineTest.cpp  main.cpp
hardcoded_streaming_engine/: CMakeLists.txt  README.md  main.cpp
jeyhun_benchmark/: Makefile  README.md  benchmark.c
streaming_engine/: CMakeLists.txt  OperatorPipe.h  README.md  main.cpp
streaming_engine/operators/: CMakeLists.txt  ConsoleInputOperator.h  ConsoleOutputOperator.h  ConstantInputOperator.h  ConsumingOperator.h  Definitions.h  FilterOperator.h  GeneratingOperator.h  HashJoinOperator.h  LambdaOutputOperator.h  MapOperator.h  ParsingOperator.h  README.md  TCPReceiveOperator.h  TransformingOperator.h  WindowOperator.h
streaming_engine/tests/: CMakeLists.txt  FilterOperatorTest.cpp  README.md  main.cpp
string_engine/: CMakeLists.txt  Pipeline.cpp  Pipeline.h  README.md  Schema.h  main.cpp
string_engine/generated_code_libraries/: Semaphore.h  Timestamp.h
string_engine/operator/: Aggregation.cpp  Aggregation.h  Append.cpp  Append.h  CMakeLists.txt  Combine.cpp  Combine.h  ConsoleInput.cpp  ConsoleOutput.cpp  Filter.cpp  HashJoin.cpp  HashJoin.h  Operator.h  Parse.cpp  Parse.h  ProcessingTimeSlidingWindow.cpp  ProcessingTimeSlidingWindow.h  TCPReceiver.cpp
test_engines/: README.md  adSource.csv  checkoutSource.csv  evaluate_results.py  expectedAggregationResults-Step1.txt  expectedAggregationResults-Step2.txt  expectedAggregationResults-Step3.txt  results.csv  run_tests.sh  whatIsTested.txt
visualize_benchmark/: README.md  compare.py  plot1.py  plot2.py  plot3.py  plot4.py  plot5.py  run_benchmarks.sh
